--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.idea/
+.idea
 # Created by .ignore support plugin (hsz.mobi)
 ### JupyterNotebooks template
 # gitignore template for Jupyter Notebooks
